// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When given a danger message Message renders snapshot properly 1`] = `
<div
  className="notification is-danger"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Hello workd
  </span>
</div>
`;

exports[`When given a success message Message renders snapshot properly 1`] = `
<div
  className="notification is-success"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Hello workd
  </span>
</div>
`;
